--- a/css/single-service.css
+++ b/css/single-service.css
@@ -710,7 +710,7 @@ body.swal2-shown {
 
 .container {
     max-width: 1290px;
-    padding: 0 20px
+    padding: 0 20px 15px 0 !important;
 }
 
 .section {
